--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
   },
   "devDependencies": {
     "cypress": "^12.14.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.53.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-cypress": "^2.8.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^22.21.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^27.5.1"
   },
   "nodemonConfig": {
