--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,35 +3,34 @@ name: Build and Test
 
 # This workflow will run on any push to the repository
 on:
-    push
+  push
 
 jobs:
-    test:
+  test:
     # Similar to docker, we set up a virtual machine to run our tests
-        runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
-        # Each step has a name, some code, and some options
-        - name: Check out the repo
-          uses: actions/checkout@v4 # This is a reference to some code to run
+      # Each step has a name, some code, and some options
+      - name: Check out the repo
+        uses: actions/checkout@v4 # This is a reference to some code to run
 
       # This step installs the Node version we want
-        - name: Set up Node.js
-          uses: actions/setup-node@v3
-          with:
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
           node-version: 18
 
       # This step installs pip, pipenv, and our dependencies
-        - name: Install dependencies
-          run:
-            npm install
+      - name: Install dependencies
+        run: npm install
 
-        - name: Start MongoDB
-          uses: supercharge/mongodb-github-action@1.10.0
-          with:
-                mongodb-version: 5.0
+      # Start MongoDB service
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: 5.0
 
       # Now we run our tests
-        - name: Test with Jest, Cypress
-        run:
-            npm run start:test
+      - name: Test with Jest, Cypress
+        run: npm run start:test
