--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ name: Build and Test
 
 # This workflow will run on any push to the repository
 on:
-  push
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -25,14 +27,24 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Start MongoDB service
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.10.0
+      #deploy
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          mongodb-version: 5.0
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
 
-      # Now we run our tests with Jest, Cypress
-      - name: Test with Jest, Cypress
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm run start:test
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync . s3://sandra-acebook --delete
+
+
+      # Create deployment to CodeDeploy
+      - name: AWS Create Deployment
+        run: |
+          aws deploy create-deployment \
+          --application-name ${{ matrix.appname }} \
+          --deployment-config-name CodeDeployDefault.OneAtATime \
+          --deployment-group-name ${{ matrix.deploy-group }} \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=${{ matrix.s3-bucket }},key=${{ matrix.s3-filename }}.zip,bundleType=zip \
