--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # Zip the application files
+      - name: Zip application
+        run: zip -r sandra-acebook.zip .
+
+
       #deploy
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -35,8 +40,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
-      - name: Deploy static site to S3 bucket
-        run: aws s3 sync . s3://sandra-acebook --delete
+      - name: AWS Deploy push
+        run: |
+          aws deploy push \
+          --application-name sandra-acebook \
+          --ignore-hidden-files \
+          --s3-location s3://sandra-acebook/sandra-acebook.zip \
+          --source .
 
 
       # Create deployment to CodeDeploy
