--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
 
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync . s3://sandra-acebook/sandra-acebook.zip --delete
 
       # Create deployment to CodeDeploy
       - name: AWS Create Deployment
